syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc GetUser(UserID) returns (UserResponse){}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc DeleteUser(UserID) returns (DeleteResponse) {}
}

message UserID { int64 id = 1; }

message DeleteResponse {
  int64 status = 1;
  string error = 2;
}

message UserResponse {
  int64 status = 1;
  string error = 2;
  User data = 3;
}
message User{
  int64 id = 1;
  string email = 2;
  string name = 3;
  int64 schoolId = 4;
  int64 roleId = 5;
}


message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3 ;
  int64 schoolId = 4;
  int64 roleId = 5;
}

message RegisterResponse {
  int64 status = 1;
  int64 userId = 2;
  string error = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}